--- a/index.html
+++ b/index.html
@@ -9,22 +9,36 @@
 				text-decoration: line-through;
 				color: grey;
 			}
+			.hide {
+				display: none;
+			}
 		</style>
 	</head>
 	<body>
 		<div ng-controller="TodoCtrl">
-			<span>{{remaining()}} of {{todos.length}} remaining</span>
-			<ul class="unstyled">
-				<li ng-repeat="todo in todos">
-					<input type="checkbox" ng-model="todo.done">
-					<span class="done-{{todo.done}}">{{todo.text}}</span>
-				</li>
-			</ul>
-			<form ng-submit="addTodo()">
-				<input type="text" ng-model="todoText"	size="30"
-							 placeholder="add new todo here">
-				<input class="btn-primary" type="submit" value="add">
-			</form>
+			<div class="{{listClass}}">
+				<span>{{remaining()}} of {{todos.length}} remaining</span>
+				<ul class="unstyled">
+					<li ng-repeat="todo in todos">
+						<input type="checkbox" ng-model="todo.done">
+						<span class="done-{{todo.done}}">{{todo.text}}</span>
+					</li>
+				</ul>
+				<form ng-submit="addTodo()">
+					<input type="text" ng-model="todoText"	size="30"
+								 placeholder="add new todo here">
+					<input class="btn-primary" type="submit" value="add">
+				</form>
+			</div>
+			<div class="{{archiveClass}}">
+				<span>{{archived.length}} total archived</span>
+				<ul class="unstyled">
+					<li ng-repeat="todo in archived">
+						<input type="checkbox" ng-model="todo.done" disabled>
+						<span>{{todo.text}}</span>
+					</li>
+				</ul>
+			</div>
 		</div>
 	</body>
 </html>
